Added optional fields for plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,9 @@ name: HelpRestored
 version: 1.0
 main: com.gozarproductions.HelpRestored
 api-version: 1.21
+description: Restores Bukkit's help.yml to Purpur.
+author: Erika Gozar
+website: https://gozarproductions.com
 commands:
   help:
     description: Dummy command to initialize HelpMap
