Commented out /helpreload

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,16 +10,16 @@ commands:
     description: Shows the help menu.
     usage: /help
     permission: helprestored.use
-  helpreload:
-    description: Reloads help.yml and all configs.
-    usage: /helpreload
-    permission: helprestored.admin
+  # helpreload:
+  #   description: Reloads help.yml and all configs.
+  #   usage: /helpreload
+  #   permission: helprestored.admin
 permissions:
   helprestored.use:
     description: Allows use of /help
     default: true
-  helprestored.admin:
-    description: Allows use of /helpreload
-    default: op
-    children:
-      helprestored.use: true
+  # helprestored.admin:
+  #   description: Allows use of /helpreload
+  #   default: op
+  #   children:
+  #     helprestored.use: true
