Linked to the repo instead of using BuildTools

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <version>1.0.0</version>
     <name>Help Restored</name>
     <description>Restores Bukkit's help.yml to Purpur.</description>
+    <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
