--- a/.github/workflows/edit-modrinth-release.yml
+++ b/.github/workflows/edit-modrinth-release.yml
@@ -50,6 +50,7 @@ jobs:
                     channel = "beta"
                     featured = false
                 else
+                    channel="release"
                     if [[ "$IS_LATEST" == "true" ]]; then
                         echo "🌟 Latest release — setting as featured"
                         featured=true
