Made workflows use modrinth-config.json

--- a/.github/workflows/update-modrinth-description.yml
+++ b/.github/workflows/update-modrinth-description.yml
@@ -22,9 +22,12 @@ jobs:
                 echo "Preparing description payload..."
                 jq -Rs --arg body "$(cat README.md)" '{ body: $body }' > body.json
 
+                CONFIG=$(cat modrinth-config.json)
+                PROJECT_ID=$(echo "$CONFIG" | jq -r '.project_id')
+
                 echo "Sending PATCH request to Modrinth..."
 
-                response=$(curl -s -w "\n%{http_code}" -X PATCH https://api.modrinth.com/v2/project/zE5EbgF4 \
+                response=$(curl -s -w "\n%{http_code}" -X PATCH https://api.modrinth.com/v2/project/$PROJECT_ID \
                     -H "Authorization: $MODRINTH_TOKEN" \
                     -H "Content-Type: application/json" \
                     --data @body.json)
