--- a/.github/workflows/modrinth-upload.yml
+++ b/.github/workflows/modrinth-upload.yml
@@ -38,6 +38,12 @@ jobs:
 
           - name: Prepare Modrinth metadata
             run: |
+                CONFIG=$(cat modrinth-config.json)
+                PROJECT_ID=$(echo "$CONFIG" | jq -r '.project_id')
+                LOADERS=$(echo "$CONFIG" | jq -c '.loaders')
+                GAME_VERSIONS=$(echo "$CONFIG" | jq -c '.game_versions')
+                DEPENDENCIES=$(echo "$CONFIG" | jq -c '.dependencies')
+
                 echo "${{ github.event.release.body }}" > changelog.txt
 
                 prerelease=${{ github.event.release.prerelease }}
@@ -63,16 +69,21 @@ jobs:
                 --arg file "$ASSET_NAME" \
                 --arg channel "$channel" \
                 --argjson featured "$featured" \
+                --argjson game_versions "$GAME_VERSIONS" \
+                --argjson loaders "$LOADERS" \
+                --argjson dependencies "$DEPENDENCIES" \
+                --arg project_id "$PROJECT_ID" \
+
                 '{
                     name: $name,
                     version_number: $version,
-                    project_id: "zE5EbgF4",
-                    game_versions: ["1.21", "1.21.1", "1.21.2", "1.21.3", "1.21.4"],
-                    loaders: ["spigot", "paper", "purpur"],
+                    project_id: $project_id,
+                    game_versions: $game_versions,
+                    loaders: $loaders,
                     featured: $featured,
                     release_channel: $channel,
                     changelog: $changelog,
-                    dependencies: [],
+                    dependencies: $dependencies,
                     file_parts: [$file]
                 }' > version.json
 
