Revert "Made workflows use modrinth-config.json"
This reverts commit de7cc841a341e6f3ddadc8ad1b97c2fd531e2311.

--- a/.github/workflows/delete-modrinth-release.yml
+++ b/.github/workflows/delete-modrinth-release.yml
@@ -8,11 +8,6 @@ jobs:
     delete-modrinth:
         runs-on: ubuntu-latest
         steps:
-          - name: Load Modrinth config
-            run: |
-                CONFIG=$(cat modrinth-config.json)
-                PROJECT_ID=$(echo "$CONFIG" | jq -r '.project_id')
-
           - name: Delete corresponding Modrinth release
             env:
                 MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
@@ -22,6 +17,7 @@ jobs:
 
                 echo "Looking for Modrinth version with tag: $RELEASE_TAG"
 
+                PROJECT_ID="zE5EbgF4"
                 API_URL="https://api.modrinth.com/v2/project/$PROJECT_ID/version"
 
                 VERSION_DATA=$(curl -s -H "Authorization: $MODRINTH_TOKEN" "$API_URL")
