Fixing modrinth-upload.yml

--- a/.github/workflows/modrinth-upload.yml
+++ b/.github/workflows/modrinth-upload.yml
@@ -73,7 +73,7 @@ jobs:
                     changelog: .,
                     dependencies: [],
                     file_parts: [$file]
-                }' < changelog.txt > update.json
+                }' < changelog.txt > version.json
 
           - name: Upload to Modrinth via API
             env:
