--- a/.github/workflows/modrinth-upload.yml
+++ b/.github/workflows/modrinth-upload.yml
@@ -38,7 +38,7 @@ jobs:
 
           - name: Prepare Modrinth metadata
             run: |
-                echo "${{ toJson(github.event.release.body) }}" | jq -r '.' > changelog.txt
+                echo "${{ toJson(github.event.release.body) }}" | jq -r 'fromjson' > changelog.txt
 
                 prerelease=${{ github.event.release.prerelease }}
                 if [ "$prerelease" = "true" ]; then
