--- a/.github/workflows/modrinth-upload.yml
+++ b/.github/workflows/modrinth-upload.yml
@@ -16,8 +16,11 @@ jobs:
             run: |
                 echo "Fetching release info..."
                 api_url="https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}"
-                asset_info=$(curl -s -H "Authorization: token $GH_TOKEN" $api_url)
-                jar_name=$(echo "$asset_info" | jq -r '.assets[] | select(.name | endswith(".jar")) | .name' | head -n 1)
+                release_info=$(curl -s -H "Authorization: token $GH_TOKEN" "$api_url")
+                
+                echo "$release_info" | jq -r '.body' > changelog.txt
+
+                jar_name=$(echo "$release_info" | jq -r '.assets[] | select(.name | endswith(".jar")) | .name' | head -n 1)
 
                 if [ -z "$jar_name" ]; then
                     echo "No .jar asset found in release!"
@@ -25,10 +28,6 @@ jobs:
                 fi
 
                 echo "ASSET_NAME=$jar_name" >> $GITHUB_ENV
-
-                echo "release_info<<EOF" >> $GITHUB_OUTPUT
-                echo "$asset_info" >> $GITHUB_OUTPUT
-                echo "EOF" >> $GITHUB_OUTPUT
 
           - name: Download the JAR from the release
             env:
@@ -42,8 +41,6 @@ jobs:
 
           - name: Prepare Modrinth metadata
             run: |
-                echo "${{ steps.get-jar.outputs.release_info }}" | jq -r '.body' > changelog.txt
-
                 prerelease=${{ github.event.release.prerelease }}
                 if [ "$prerelease" = "true" ]; then
                     echo "🔶 Prerelease detected — setting to beta and not featured"
@@ -69,13 +66,24 @@ jobs:
                 '{
                     name: $name,
                     version_number: $version,
-                    project_id: "zE5EbgF4",
+                    project_id: "nEc9YJra",
                     game_versions: ["1.21", "1.21.1", "1.21.2", "1.21.3", "1.21.4"],
                     loaders: ["spigot", "paper", "purpur"],
                     featured: $featured,
                     release_channel: $channel,
                     changelog: .,
-                    dependencies: [],
+                    dependencies: [
+                    {
+                        version: "*",
+                        project_id: "UmLGoGij",
+                        dependency_type: "required"
+                    },
+                    {
+                        version: "*",
+                        project_id: "hXiIvTyT",
+                        dependency_type: "required"
+                    }
+                    ],
                     file_parts: [$file]
                 }' < changelog.txt > version.json
 
