--- a/.github/workflows/modrinth-upload.yml
+++ b/.github/workflows/modrinth-upload.yml
@@ -66,7 +66,7 @@ jobs:
                 '{
                     name: $name,
                     version_number: $version,
-                    project_id: "nEc9YJra",
+                    project_id: "zE5EbgF4",
                     game_versions: ["1.21", "1.21.1", "1.21.2", "1.21.3", "1.21.4"],
                     loaders: ["spigot", "paper", "purpur"],
                     featured: $featured,
