--- a/.github/workflows/modrinth-upload.yml
+++ b/.github/workflows/modrinth-upload.yml
@@ -72,18 +72,7 @@ jobs:
                     featured: $featured,
                     release_channel: $channel,
                     changelog: .,
-                    dependencies: [
-                    {
-                        version: "*",
-                        project_id: "UmLGoGij",
-                        dependency_type: "required"
-                    },
-                    {
-                        version: "*",
-                        project_id: "hXiIvTyT",
-                        dependency_type: "required"
-                    }
-                    ],
+                    dependencies: [],
                     file_parts: [$file]
                 }' < changelog.txt > version.json
 
